--- a/DownTimeBot/build.gradle
+++ b/DownTimeBot/build.gradle
@@ -44,7 +44,13 @@ dependencies
     implementation ("com.google.code.gson:gson:2.9.0")
     
     //MySQL
-    implementation ("mysql:mysql-connector-java:8.0.28")
+    //implementation ("mysql:mysql-connector-java:8.0.28")
+    
+    //Google Sheets
+    implementation ("com.google.api-client:google-api-client:2.0.0")
+    implementation ("com.google.oauth-client:google-oauth-client-jetty:1.34.1")
+    implementation ("com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0")
+    
 }
 
 application 
